# VoltageEMS

./: .actrc  .dockerignore  .earthlyignore  .env  .gitignore  .gitmodules  .luacheckrc  AGENT.md  AXUM_0.8.4_UPGRADE_COMPLETE.md  CHANGELOG.md  CLAUDE.md  CONFIG_UNIFICATION_SUMMARY.md  Cargo.toml  DOCKER_TEST_README.md  Dockerfile  Dockerfile.base  Dockerfile.influxdb-writer  Dockerfile.multi  Earthfile  GRAFANA_EMBEDDED_SOLUTION.md  GRAFANA_FIX_SOLUTION.md  INTEGRATION_SUMMARY.md  Jenkinsfile  LICENSE  MODBUS_CURRENT_IMPLEMENTATION.md  MODBUS_UNIFIED_ARCHITECTURE.md  Makefile  PROJECT_STRUCTURE.md  README-CN.md  README-ELECTRON.md  README.md  README_MODBUS_TEST.md  README_MODBUS_TEST_CN.md  README_YAML_DEFAULT.md  SERVICES_OVERVIEW.md  VOLTAGE_MODBUS_INTEGRATION_COMPLETE.md  VoltageEMS_MonarchHub_功能说明书.md  apigateway.yml  cargo.toml  clippy.toml  (+44 more)
apps/ems-console/: Cargo.toml  README.md  build.rs
apps/ems-console/src/: main.rs
apps/ems-console/ui/: main.slint
figment_demo/: Cargo.toml  comsrv_complete.yaml
figment_demo/src/: main.rs
libs/: Cargo.toml
libs/common/: Cargo.toml
libs/common/src/: admin_api.rs  api_types.rs  bootstrap_args.rs  bootstrap_database.rs  bootstrap_system.rs  bootstrap_validation.rs  config_loader.rs  error.rs  hex.rs  lib.rs  logging.rs  redis.rs  serde_helpers.rs  service_bootstrap.rs  service_config.rs  shutdown.rs  sqlite.rs  system_metrics.rs  test_utils.rs  validation.rs  warning_monitor.rs
libs/errors/: Cargo.toml
libs/errors/src/: lib.rs
libs/src/: config.rs  error.rs  lib.rs  logging.rs  metrics.rs  test_utils.rs  types.rs  utils.rs
libs/src/config/: loader.rs  mod.rs  utils.rs
libs/src/influxdb/: builder.rs  client.rs  mod.rs
libs/src/redis/: client.rs  edge_redis.rs  mod.rs
libs/voltage-calc/: Cargo.toml
libs/voltage-calc/src/: builtin_functions.rs  error.rs  evaluator.rs  lib.rs  state.rs
libs/voltage-comlink/: Cargo.toml
libs/voltage-comlink/src/: bytes.rs  error.rs  lib.rs  protocols.rs  traits.rs
libs/voltage-common/: Cargo.toml
libs/voltage-common/src/: config.rs  error.rs  lib.rs  logging.rs  metrics.rs  redis.rs  test_utils.rs  types.rs  utils.rs
libs/voltage-config/: Cargo.toml  README.md
libs/voltage-config/src/: api.rs  calculations.rs  common.rs  comsrv.rs  error.rs  keyspace.rs  lib.rs  modsrv.rs  products.rs  protocols.rs  routing_cache.rs  rules.rs  rulesrv.rs  serde_defaults.rs  validation.rs
libs/voltage-config/tests/: modsrv_schema_test.rs  test_bool_deserialize.rs  test_rules_schema.rs  test_rulesrv_schema.rs
libs/voltage-infra/: Cargo.toml
libs/voltage-infra/src/: lib.rs  redis.rs  sqlite.rs
libs/voltage-model/: Cargo.toml
libs/voltage-model/src/: calculation.rs  energy.rs  error.rs  expression.rs  keyspace.rs  lib.rs  product_lib.rs  products.rs  statistics.rs  timeseries.rs  types.rs  validation.rs
libs/voltage-protocols/: Cargo.toml
libs/voltage-protocols/src/: dido.rs  lib.rs  modbus.rs  virt.rs
libs/voltage-routing/: Cargo.toml
libs/voltage-routing/src/: batch.rs  lib.rs  loader.rs
libs/voltage-rtdb/: Cargo.toml
libs/voltage-rtdb/src/: cleanup.rs  error.rs  keyspace.rs  lib.rs  memory_impl.rs  numfmt.rs  redis_impl.rs  routing_cache.rs  shared_impl.rs  time.rs  traits.rs  vec_impl.rs  write_buffer.rs
libs/voltage-rtdb/tests/: buffer_batch_integration.rs  consistency_tests.rs  (+1 more)
libs/voltage-rules/: Cargo.toml
libs/voltage-schema-macro/: Cargo.toml  README.md
services/Comsrv/: CMakeLists.txt  Cargo.toml  DevDockerfile  DevEnv.ps1  DevEnv.sh  Dockerfile  README.md  docker-compose.yml  prometheus.yml  readme.md  start.sh
services/Hissrv/: API_DESIGN.md  AXUM_UPGRADE_STATUS.md  CMakeLists.txt  COMPILATION_STATUS.md  Cargo.toml  DASHBOARD_STRATEGY.md  Dockerfile  GRAFANA_INTEGRATION.md  IMPLEMENTATION_SUMMARY.md  POINTS_CONFIG.md  README.md  STORAGE_ARCHITECTURE.md  TESTING.md  TEST_REPORT.md  check_syntax.sh  config.cpp  config.h  docker-compose.test.yml  hissrv-dev.yaml  hissrv.conf  hissrv.yaml  influxdb_handler.cpp  influxdb_handler.h  main.cpp  redis_handler.cpp  redis_handler.h  run-docker-test.sh  run-local-docker-test.sh  run_tests.sh  start.sh  功能说明.md
services/alarmsrv/: Cargo.toml  Dockerfile  README.md  README_ZH.md  alarmsrv-unix.yaml  alarmsrv.yaml  main.py  requirements.txt  start.sh  功能说明.md
services/apigateway/: Cargo.toml  Dockerfile  README.md  apigateway.yaml  apigateway.yml  main.py  requirements.txt  start-with-config-service.sh  test_api.sh
services/comsrv/: .dockerignore  .gitignore  ARC_USAGE_ANALYSIS.md  ARC_USAGE_REFACTORING_SUMMARY.md  Cargo.toml  Dockerfile  FEATURES.md  INTEGRATION_TEST_REPORT.md  MODBUS_MULTI_SLAVE_SUMMARY.md  README.md  TEST_REPORT.md  build.rs  clippy.toml  comsrv-enhanced-redis.yaml  docker-compose.multi.yml  docker-compose.test.yml  docker-compose.yml  docker-multi-test-report.md  final_test_report_20250711.md  run-docker-tests.sh  simple_modbus_server.py  start.sh  test_config_center.sh  test_config_diagnosis.py  test_csv_loading.rs  test_modbus_server.py  test_report_20250711.md
services/config-cli/: Cargo.toml  README.md
services/config-framework/: Cargo.toml  MIGRATION_GUIDE.md  README.md
services/hissrv/: Cargo.toml  Dockerfile  README.md  requirements.txt
services/modsrv/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.check  Dockerfile.gui  Dockerfile.test  LOCAL-TEST-README.md  README.md  README_storage.md  TEST-README.md  cleanup.py  docker-compose.complete-test.yml  docker-compose.test.yml  docker-compose.yml  modsrv.toml  modsrv.yaml  run-complete-docker-test.sh  run-gui.bat  run-gui.sh  run-local-tests.sh  run-script.sh  test-api.py  test-rules-api.py  功能说明.md
services/netsrv/: CONFIG_INTEGRATION_SUMMARY.md  Cargo.toml  Dockerfile  README.md  README_UNIFIED_MQTT.md  docker-compose.yml  main.py  requirements.txt  功能说明.md
services/rulesrv/: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.test  README.md  docker-compose.simple.yml  docker-compose.test.yml  dump.rdb  run_tests.sh  test-api.sh  test-docker.sh  test-rules.sh  test_local.sh  test_rule_simple.json
(+1999 files in other folders)
