[workspace]
resolver = "2"
members = [
    "libs",
    "services/alarmsrv",
    "services/apigateway",
    "services/comsrv",
    "services/hissrv",
    "services/modsrv",
    "services/netsrv",
    "services/rulesrv",
]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1"

# Web frameworks
axum = { version = "0.8.4", features = ["macros", "http2"] }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["cors", "limit", "trace", "fs"] }
hyper = { version = "1.6" }
http = "1.2"
http-body = "1.0"
http-body-util = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# gRPC
tonic = "0.11"
prost = "0.12"

# Database
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "chrono",
    "json",
    "uuid",
] }
redis = { version = "0.32", features = ["tokio-comp", "connection-manager"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "json",
    "time",
] }
tracing-appender = "0.2"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# HTTP clients
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# InfluxDB 2.x client
influxdb2 = "0.5"

# Configuration
config = "0.14"
figment = { version = "0.10", features = ["yaml", "toml", "json", "env"] }

# Utilities
futures = "0.3"
bytes = "1.5"
async-trait = "0.1"

# Testing
tempfile = "3.8"
tokio-test = "0.4"

# Monitoring
prometheus = { version = "0.13", features = ["process"] }

# Industrial protocols
socketcan = "3.3"

# Special dependencies for apigateway
actix-web = "4"
actix-cors = "0.6"
actix-web-httpauth = "0.8"
actix-rt = "2"
env_logger = "0.10"
log = "0.4"
jsonwebtoken = "9"
once_cell = "1"

# Internal dependencies
# voltage-config = { path = "services/config-framework" }

