[workspace]
resolver = "2"
members = [
    "libs/common",
    "libs/voltage-comlink",
    "libs/voltage-config",
    "libs/voltage-model",
    "libs/voltage-protocols",
    "libs/voltage-rtdb",
    "libs/voltage-routing",
    "libs/voltage-rules",
    "libs/voltage-schema-macro",
    "services/comsrv",
    "services/modsrv",
    # CLI tools
    "tools/monarch",
]

[workspace.package]
license = "MIT OR Apache-2.0"

# Clippy lints configuration
# Run with: cargo clippy --workspace -- -W clippy::unwrap_used -W clippy::expect_used

[workspace.dependencies]
# Modbus protocol library (crates.io)
voltage_modbus = "0.4.1"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1"

# Web frameworks
axum = { version = "0.8.4", features = ["macros", "http2"] }
utoipa = { version = "5.4.0", features = ["macros", "axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
csv = "1.3"

# gRPC
tonic = "0.11"
prost = "0.12"

# Database
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "sqlite",
    "chrono",
    "json",
    "uuid",
    "macros",
] }
redis = { version = "0.26", features = ["tokio-comp", "connection-manager"] }
redis-module = "2.0"
bb8 = "0.8"
bb8-redis = "0.16"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = [
    "env-filter",
    "json",
    "time",
] }
tracing-appender = "0.2"
flate2 = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# HTTP clients
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Configuration
figment = { version = "0.10", features = ["yaml", "toml", "json", "env"] }

# Utilities
futures = "0.3"
bytes = "1.5"
async-trait = "0.1"
evalexpr = "11"  # Expression evaluation with proper operator precedence

# Testing
tempfile = "3.8"

# Common utilities
clap = { version = "4.0", features = ["derive", "env"] }
rand = "0.8"
sha2 = "0.10"
regex = "1.10"

# Industrial and hardware
tokio-serial = "5.4"

# Data structures and algorithms
dashmap = { version = "5.5", features = ["serde"] }
ahash = "0.8"
cron = "0.12"

# Tower middleware
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace"] }

# Build dependencies
tonic-build = "0.11"

# Dev dependencies
criterion = { version = "0.5", features = ["async_tokio"] }
tracing-test = "0.2"

# UI dependencies for CLI tools
colored = "2.0"
indicatif = "0.17"

# Performance optimization profiles
[profile.release]
opt-level = 3              # Maximum runtime performance
lto = "fat"               # Full link-time optimization
codegen-units = 1          # Better global optimization
strip = true              # Strip symbols for smaller binary
panic = "abort"           # Smaller binary, no unwinding
split-debuginfo = "packed" # Rust 1.90.0: Faster linking, smaller debug info

# Fast development-release profile (Rust 1.90.0 optimized)
[profile.dev-release]
inherits = "release"
opt-level = 2      # Slightly lower optimization for faster compilation
lto = "thin"       # Lightweight LTO for balance between speed and size
codegen-units = 16 # Faster parallel compilation
strip = false      # Keep symbols for easier debugging
