[package]
name = "figment_demo"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
figment = { version = "0.10", features = ["yaml", "toml", "json", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["full"] }
csv = "1.3"