[package]
name = "voltage-libs"
version = "0.1.0"
edition = "2021"

[features]
default = ["redis", "influxdb"]
redis = ["dep:redis"]
influxdb = ["dep:reqwest", "dep:hyper"]
metrics = []
full = ["redis", "influxdb", "metrics"]

[dependencies]
# 基础依赖
tokio = { version = "1.36", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
hex = "0.4"

# Redis 相关
redis = { version = "0.29", features = ["tokio-comp", "connection-manager"], optional = true }

# InfluxDB 相关
reqwest = { version = "0.11", features = ["json"], optional = true }
hyper = { version = "0.14", optional = true }


[dev-dependencies]
tokio-test = "0.4"