[package]
name = "voltage-libs"
version = "0.0.1"
edition = "2021"

[features]
default = ["redis", "influxdb"]
redis = ["dep:redis"]
influxdb = ["dep:influxdb2"]
metrics = ["dep:once_cell", "dep:prometheus"]
full = ["redis", "influxdb", "metrics"]

[dependencies]
# 基础依赖
tokio = { version = "1.36", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
hex = "0.4"

# Redis 相关
redis = { version = "0.29", features = ["tokio-comp", "connection-manager"], optional = true }

# InfluxDB 相关
influxdb2 = { version = "0.5", optional = true }

# Metrics 相关
once_cell = { version = "1.19", optional = true }
prometheus = { version = "0.13", optional = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.5"
rand = "0.8"
serde_yaml = "0.9"
toml = "0.8"
once_cell = "1.19"
prometheus = "0.13"