[package]
name = "voltage-libs"
version = "0.0.1"
edition = "2021"

[features]
default = ["redis", "influxdb"]
redis = ["dep:redis"]
influxdb = ["dep:influxdb2"]

[dependencies]
tokio = { version = "1.36", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "json",
    "fmt",
] }
tracing-appender = "0.2"
lazy_static = "1.4"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
hex = "0.4"

# Redis
redis = { version = "0.32", features = [
    "tokio-comp",
    "connection-manager",
], optional = true }

# InfluxDB
influxdb2 = { version = "0.5.2", optional = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.5"
rand = "0.8"
