[package]
name = "ems-console"
version = "0.1.0"
edition = "2021"

[dependencies]
slint = "1.14"
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "time"] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "sqlite",
    "chrono",
    "json"
] }
redis = { version = "0.26", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"

voltage-config = { path = "../../libs/voltage-config" }

[build-dependencies]
slint-build = "1.14"

[features]
default = []
