[package]
name = "common"
version = "0.1.0"
edition = "2021"
license.workspace = true

[features]
default = ["redis", "sqlite", "axum", "openapi"]
redis = ["voltage-infra/redis", "dep:redis"]
sqlite = ["voltage-infra/sqlite", "dep:sqlx"]
cli = ["dep:clap", "dep:reqwest"]
axum = ["dep:axum"]
openapi = ["dep:utoipa"]
schema = ["dep:schemars"]

[dependencies]
errors = { path = "../errors" }
voltage-infra = { path = "../voltage-infra", default-features = false }
voltage-model = { path = "../voltage-model" }
voltage-schema-macro = { path = "../voltage-schema-macro" }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = [
    "env-filter",
    "json",
    "fmt",
] }
tracing-appender = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
anyhow = { workspace = true }
flate2 = { workspace = true }
csv = { workspace = true }
futures = { workspace = true }
axum = { workspace = true, optional = true }
utoipa = { workspace = true, optional = true }
sysinfo = "0.32"

# CLI dependencies  
clap = { workspace = true, features = ["derive", "env", "cargo"], optional = true }
reqwest = { workspace = true, features = ["json"], optional = true }

# Redis - kept for direct usage in warning_monitor and service_config helpers
redis = { workspace = true, optional = true }

# SQLite - kept for direct usage in test_utils and service_config
sqlx = { workspace = true, optional = true }

# Schema generation
schemars = { version = "0.8", optional = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = { workspace = true }
rand = { workspace = true }
