[package]
name = "voltage-calc"
version = "0.1.0"
edition = "2021"
license.workspace = true
description = "Unified calculation library for VoltageEMS - expression evaluation and built-in functions"

[dependencies]
# Expression evaluation
evalexpr = { workspace = true }

# Async support
async-trait = { workspace = true }
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Pattern matching for function parsing
regex = { workspace = true }

# Time
chrono = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
# tokio-test removed - not used in tests

