[package]
name = "voltage-calc"
version = "0.1.0"
edition = "2021"
license.workspace = true
description = "Unified calculation library for VoltageEMS - expression evaluation and built-in functions"

[dependencies]
# Expression evaluation
evalexpr = { workspace = true }

# Async sync primitives (RwLock for state)
tokio = { workspace = true, default-features = false, features = ["sync"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Pattern matching for function parsing
regex = { workspace = true }

# Time
chrono = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
# No dev dependencies needed

[lints]
workspace = true

