[package]
name = "voltage-comlink"
version = "0.0.1"
edition = "2021"
license.workspace = true
description = "Communication link library for VoltageEMS - protocol abstractions, Modbus, CAN, and virtual protocols"

[dependencies]
# Local dependencies
voltage-config = { path = "../voltage-config" }
voltage-rtdb = { path = "../voltage-rtdb" }
common = { path = "../common", default-features = false }

# Async runtime
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Logging
tracing = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Industrial communication
tokio-serial = { workspace = true }

# Data structures
dashmap = { workspace = true }
bytes = { workspace = true }

# Utils
chrono = { workspace = true }
rand = { workspace = true }

# CAN bus support (DBC parsing is platform-independent)
can-dbc = { version = "4.0", optional = true }

# Platform-specific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
socketcan = { version = "3.3", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[features]
default = ["modbus", "can"]
modbus = []
can = ["can-dbc"]
can-linux = ["can", "socketcan"]

[lints.clippy]
cast-possible-truncation = "allow"
cast-possible-wrap = "allow"
cast-sign-loss = "allow"
