[package]
name = "voltage-comlink"
version = "0.1.0"
edition = "2021"
license.workspace = true
description = "Communication link library for VoltageEMS - protocol abstractions, Modbus, and virtual protocols"

[dependencies]
# Local dependencies
voltage-model = { path = "../voltage-model" }
voltage-rtdb = { path = "../voltage-rtdb" }

# Modbus library (for error conversion)
voltage_modbus = { workspace = true }

# Async runtime
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Logging
tracing = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Industrial communication
tokio-serial = { workspace = true }

# Data structures
dashmap = { workspace = true }
bytes = { workspace = true }

# Utils
chrono = { workspace = true }
# rand removed - not currently used

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[features]
default = ["modbus"]
modbus = []

[lints.clippy]
cast-possible-truncation = "allow"
cast-possible-wrap = "allow"
cast-sign-loss = "allow"
