[package]
name = "voltage-config"
version = "0.0.1"
edition = "2021"
license.workspace = true
description = "Shared configuration structures for VoltageEMS services"

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
csv = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Redis for runtime validation
redis = { workspace = true }

# Time handling
chrono = { workspace = true }

# Concurrent data structures
dashmap = { workspace = true }

# Database support
sqlx = { workspace = true }

# Schema macro for automatic SQL DDL generation
voltage-schema-macro = { path = "../voltage-schema-macro" }

# HTTP client (for error type conversion)
reqwest = { workspace = true }

# OpenAPI (optional)
utoipa = { workspace = true, optional = true }

# Schema generation (optional)
schemars = { version = "0.8", optional = true }

# Web framework (optional, for AppError)
axum = { workspace = true, optional = true }

[features]
default = ["schema-macro"]
schema = ["schemars"]
schema-macro = []
openapi = ["utoipa"]
axum-support = ["axum"]

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
