[package]
name = "voltage-infra"
version = "0.1.0"
edition = "2021"
description = "Infrastructure layer for VoltageEMS (Redis, SQLite)"

[features]
default = ["redis", "sqlite"]
redis = ["dep:redis", "dep:bb8", "dep:bb8-redis"]
sqlite = ["dep:sqlx", "dep:serde_yaml"]

[dependencies]
# Redis (optional)
redis = { workspace = true, optional = true }
bb8 = { workspace = true, optional = true }
bb8-redis = { workspace = true, optional = true }

# SQLite (optional)
sqlx = { workspace = true, optional = true }
serde_yaml = { workspace = true, optional = true }

# Common dependencies
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
