[package]
name = "voltage-model"
version = "0.1.0"
edition = "2021"
license.workspace = true
description = "Model layer library for VoltageEMS - calculations, products, and instance management"

[features]
default = []
schema = ["dep:schemars"]
openapi = ["dep:utoipa"]

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Schema generation (optional)
schemars = { version = "0.8", optional = true }

# OpenAPI (optional)
utoipa = { workspace = true, optional = true }

# Error handling
thiserror = { workspace = true }

# Parsing (for error conversion compatibility)
csv = { workspace = true }

# Database
sqlx = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[lints.clippy]
cast-possible-truncation = "allow"
cast-possible-wrap = "allow"
cast-sign-loss = "allow"
