[package]
name = "voltage-protocols"
version = "0.1.0"
edition = "2021"
description = "Protocol implementations for VoltageEMS"

[features]
default = ["virt", "modbus", "dido"]
virt = []
dido = []
modbus = ["modbus-tcp", "dep:voltage_modbus"]
modbus-tcp = ["dep:tokio-util", "dep:bytes"]
modbus-rtu = ["modbus-tcp", "dep:tokio-serial"]

[dependencies]
voltage-comlink = { path = "../voltage-comlink" }
voltage-config = { path = "../voltage-config" }
voltage_modbus = { workspace = true, optional = true }

async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Modbus dependencies (optional)
tokio-util = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }

# RTU dependencies (optional)
tokio-serial = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
