[package]
name = "voltage-routing"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true }
voltage-model = { path = "../voltage-model" }
voltage-rtdb = { path = "../voltage-rtdb" }

[dev-dependencies]
tokio = { workspace = true }
