[package]
name = "voltage-rtdb"
version = "0.1.0"
edition = "2021"
license.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }

# Optional dependencies
common = { path = "../common", optional = true }
voltage-config = { path = "../voltage-config" }
redis = { workspace = true, optional = true }

[features]
default = ["redis-backend", "memory-backend"]
redis-backend = ["common", "redis"]
memory-backend = []

[dev-dependencies]
tokio = { workspace = true }
serial_test = "3.0"
