[package]
name = "voltage-rtdb"
version = "0.1.0"
edition = "2021"
license.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
bytes = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
# Removed: async-trait (replaced by native impl Trait), chrono (unused), uuid (test-only)

# Core dependencies for keyspace
voltage-model = { path = "../voltage-model" }

# Optional dependencies
voltage-infra = { path = "../voltage-infra", optional = true, default-features = false, features = ["redis"] }
redis = { workspace = true, optional = true }

[features]
default = ["redis-backend", "memory-backend"]
redis-backend = ["voltage-infra", "redis"]
memory-backend = []

[dev-dependencies]
tokio = { workspace = true }
serial_test = "3.0"
uuid = { workspace = true }  # Only used in tests

[lints]
workspace = true
