[package]
name = "voltage-schema-macro"
version = "0.1.0"
edition = "2021"
license.workspace = true
description = "Procedural macros for automatic SQL DDL generation from Rust structs"

[lib]
proc-macro = true

[dependencies]
# Syntax parsing and code generation
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

# Attribute parsing helper
darling = "0.20"

# String case conversion (snake_case, etc.)
heck = "0.5"

[dev-dependencies]
# trybuild removed - not used in tests

# For testing generated SQL
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[lints]
workspace = true
