[package]
name = "comsrv"
version = "0.1.0"
edition = "2021"
authors = ["Voltage EMS Team"]
description = "Highly Configurable Communication Service for industrial protocols"

[dependencies]
# async runtime
tokio = { version = "1.24.2", features = ["full"] }
# logging
log = "0.4.17"
env_logger = "0.10.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-appender = "0.2.3"
# configuration parsing
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.25"
serde_json = "1.0.93"
config = { version = "0.13.1", features = ["yaml"] }
# error handling
thiserror = "1.0.38"
anyhow = "1.0.69"
# Modbus protocol implementation
tokio-modbus = { version = "0.9.0", features = ["tcp", "rtu", "server", "sync"] }
tokio-serial = "5.4.4"
# metrics monitoring
prometheus = { version = "0.13.3", features = ["process"] }
hyper = { version = "0.14", features = ["server", "http1", "tcp"] }
# API service
warp = "0.3.3"
# Redis integration
redis = { version = "0.22.1", features = ["tokio-comp"] }
# utility tools
bytes = "1.5.0"
byteorder = "1.5.0"
chrono = { version = "0.4.23", features = ["serde"] }
dashmap = "5.5.3"
dotenv = "0.15.0"
uuid = { version = "1.3.0", features = ["v4", "serde"] }
async-trait = "0.1.64"
futures = "0.3.26"
clap = { version = "4.1.8", features = ["derive"] }
regex = "1.10.2"
lazy_static = "1.4.0"
once_cell = "1.19.0"
hex = "0.4.3"

[dev-dependencies]
tempfile = "3.9.0"
mockall = "0.12.1"
tokio-test = "0.4.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
