[dependencies]
tokio = { version = "1.24", features = ["full"] }
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
csv = "1.2"
thiserror = "1.0"
anyhow = "1.0"
tokio-modbus = { version = "0.9", features = ["tcp", "rtu"] }
tokio-serial = "5.4"
warp = "0.3"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5.5"
hex = "0.4"
async-trait = "0.1"
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
tempfile = "3.9"
